[package]
name = "network-speed-dashboard-nat64-address-preferred"
version = "0.1.0"
edition = "2021"
authors = [ "masx200" ]
description = "A Rust tool for testing Cloudflare HTTP/3 connectivity with DNS over HTTPS support"
license = "MIT"


[dependencies]
anyhow = "1.0"
base64 = "0.21"
bytes = "1.11"
rcgen = "0.11"
serde_json = "1.0"
trust-dns-proto = "0.22"
regex = "1"
urlencoding = "2"
http = "1.1"
rand = "0.9"
webpki-roots = "1"
ring = "0.17.14"
futures = "0.3"
rustls-native-certs = "0.7"
rustls-pki-types = "1.10"
tracing = "0.1"
idna = "1.1.0"


[dependencies.h3]
version = "0.0.8"


[dependencies.quinn]
version = "0.10"
features = [ "rustls" ]


[dependencies.reqwest]
version = "0.12.24"
features = [ "json", "rustls-tls", "http3", "gzip", "brotli" ]


[dependencies.serde]
version = "1.0"
features = [ "derive" ]


[dependencies.tokio]
version = "1.0"
features = [ "full" ]


[dependencies.hickory-resolver]
version = "0.25.2"
features = [ "tokio", "dnssec-ring" ]


[dependencies.hickory-client]
version = "0.25.2"
features = [ "dnssec-ring" ]


[dependencies.hickory-proto]
version = "0.25.2"
features = [ "dnssec-ring" ]


[dependencies.rustls]
version = "0.23.35"
features = [ "std", "ring" ]
default-features = false


[dependencies.chrono]
version = "0.4"
features = [ "serde" ]


[dependencies.h3-quinn]
version = "0.0.10"


[dependencies.clap]
version = "4.0"
features = [ "derive" ]


[dependencies.tracing-subscriber]
version = "0.3"
features = [ "fmt", "env-filter" ]


[patch]
crates-io = { }
